--- a/docs/man/reprozip.1
+++ b/docs/man/reprozip.1
@@ -1,32 +1,32 @@
 .\" Manpage for reprozip
 .\" Contact reprozip-dev@vgc.poly.edu to correct errors or typos.
-.TH man 1 "2 June 2017" "1.0.9" "reprozip man page"
+.TH man 1 "4 November 2017" "1.0.10" "reprozip man page"
 .SH NAME
 reprozip \- the reproducibility packer
 .SH SYNOPSIS
-reprozip [-h] [--version] [-d DIR] [--dont-identify-packages]
-         [--dont-find-inputs-outputs] [-v] ...
+reprozip [\-h] [\-\-version] [\-d DIR] [\-\-dont\-identify\-packages]
+         [\-\-dont\-find\-inputs\-outputs] [\-v] ...
 .SH DESCRIPTION
 reprozip traces and packs an experiment or program into a reproducible package (.rpz file). Those packages can be archived, and reproduced later using reprounzip(1).
 .SH OPTIONS
 .SS General options:
 .TP
-.B -h, --help
+.B \-h, \-\-help
 show this help message and exit
 .TP
-.B --version
+.B \-\-version
 show program's version number and exit
 .TP
-.B -d DIR, --dir DIR
-where to store database and configuration file (default: ./.reprozip-trace)
+.B \-d DIR, \-\-dir DIR
+where to store database and configuration file (default: ./.reprozip\-trace)
 .TP
-.B --dont-identify-packages
+.B \-\-dont\-identify\-packages
 do not try identify which package each file comes from
 .TP
-.B --dont-find-inputs-outputs
+.B \-\-dont\-find\-inputs\-outputs
 do not try to identify input and output files
 .TP
-.B -v, --verbose
+.B \-v, \-\-verbose
 augments verbosity level
 
 .SS Commands:
@@ -54,13 +54,13 @@ reprozip returns 1 in case of internal error, otherwise it returns the same resu
 .TP
 .B ~/.reprozip/log
 Log file where reprozip and reprounzip write messages during execution. Useful to report issues to the developers, even if you were running without
-.IR --verbose .
+.IR \-\-verbose .
 .TP
-.B .reprozip-trace/trace.sqlite3, .reprozip-trace/config.yml
+.B .reprozip\-trace/trace.sqlite3, .reprozip\-trace/config.yml
 When tracing, the trace database and configuration file get written to a directory
-.I .reprozip-trace
+.I .reprozip\-trace
 in the current directory. This location can be overridden with
-.IR --dir .
+.IR \-\-dir .
 It can be useful to edit the configuration file before packing, to make sure no useless or private file is to be included in the package, and to correctly label input files, output files, and run steps.
 .SH ENVIRONMENT
 .TP
@@ -74,7 +74,7 @@ Trace and pack a simple Python script:
 .IP
 .nf
 .RB "$" " reprozip trace" " python foobar.py"
-.RB "$" " reprozip pack" " foobar0.4-python2.rpz"
+.RB "$" " reprozip pack" " foobar0.4\-python2.rpz"
 .fi
 .P
 Use testrun to show the files used by a command:
@@ -89,9 +89,9 @@ The ReproZip website
 https://www.reprozip.org/
 .TP
 ReproZip's GitHub repository
-https://github.com/ViDA-NYU/reprozip
+https://github.com/ViDA\-NYU/reprozip
 .SH BUGS
-Please report bugs on our mailing-list at reprozip-users@vgc.poly.edu or on GitHub at https://github.com/ViDA-NYU/reprozip/issues.
+Please report bugs on our mailing-list at reprozip\-users@vgc.poly.edu or on GitHub at https://github.com/ViDA\-NYU/reprozip/issues.
 .SH AUTHOR
 .RB "ReproZip is being developed at" " New York University" .
 
