Change email address in BUGS sections

--- a/docs/man/reprounzip-vagrant.1
+++ b/docs/man/reprounzip-vagrant.1
@@ -56,7 +56,7 @@ https://github.com/ViDA\-NYU/reprozip
 The Vagrant website
 https://www.vagrantup.com/
 .SH BUGS
-Please report bugs on our mailing-list at reprozip\-users@vgc.poly.edu or on GitHub at https://github.com/ViDA\-NYU/reprozip/issues.
+Please report bugs on our mailing-list at users@reprozip.org or on GitHub at https://github.com/ViDA\-NYU/reprozip/issues.
 .SH AUTHOR
 .RB "ReproZip is being developed at" " New York University" .
 
