--- a/docs/man/reprounzip-vagrant.1
+++ b/docs/man/reprounzip-vagrant.1
@@ -28,7 +28,7 @@ by adding the experiment's content on top of it. The default is to extract the e
 .RI ( /proc ", " /dev ", ...);"
 this can be disabled using \-\-dont\-use\-chroot.
 .TP
-.BI run " [\-\-cmdline ...] [\-\-no\-stdin] [\-\-no\-pty] [\-\-expose\-port PORT] [\-\-enable\-x11] [\-\-x11\-display DISPLAY] [\-\-pass\-env VAR] [\-\-set\-env VAR[=val]] <directory> [run]"
+.BI run " [\-\-no\-stdin] [\-\-no\-pty] [\-\-expose\-port PORT] [\-\-enable\-x11] [\-\-x11\-display DISPLAY] [\-\-pass\-env VAR] [\-\-set\-env VAR[=val]] <directory> [run] [\-\-cmdline ...]"
 Runs an experiment that has been unpacked to a directory.
 .TP
 .BI upload " <directory> [localfile:experimentfile] [...]"
