--- a/docs/man/reprounzip.1
+++ b/docs/man/reprounzip.1
@@ -58,7 +58,7 @@ for detailed information about a specific unpacker.
 .BI setup " <package.rpz> <directory>"
 Unpacks an experiment and sets it up for reproduction in the specified directory.
 .TP
-.BI run " [\-\-cmdline ...] <directory> [run]"
+.BI run " <directory> [run] [\-\-cmdline ...]"
 Runs an experiment that has been unpacked to a directory.
 .TP
 .BI upload " <directory> [localfile:experimentfile] [...]"
