Update mailing-list links to use @reprozip.org

--- a/docs/man/reprounzip-vagrant.1
+++ b/docs/man/reprounzip-vagrant.1
@@ -1,5 +1,5 @@
 .\" Manpage for reprounzip
-.\" Contact reprozip-dev@vgc.poly.edu to correct errors or typos.
+.\" Contact dev@reprozip.org to correct errors or typos.
 .TH man 1 "4 November 2017" "1.0.10" "reprounzip\-vagrant man page"
 .SH NAME
 reprounzip\-vagrant \- Vagrant unpacker for reprounzip
