Remove last date in copyright headers

--- a/docs/man/reprounzip-vagrant.1
+++ b/docs/man/reprounzip-vagrant.1
@@ -71,6 +71,6 @@ Dennis Shasha
 .fi
 .RE
 .SH COPYRIGHT
-Copyright 2014-2017 New York University.
+Copyright 2014 New York University.
 
 .RB "Licensed under a" " BSD 3-Clause license." " See the LICENSE file included with the software for details."
