--- a/docs/man/reprounzip.1
+++ b/docs/man/reprounzip.1
@@ -1,5 +1,4 @@
 .\" Manpage for reprounzip
-.\" Contact dev@reprozip.org to correct errors or typos.
 .TH man 1 "4 November 2017" "1.0.11" "reprounzip man page"
 .SH NAME
 reprounzip \- the reproducibility unpacker
@@ -127,7 +126,7 @@ https://www.reprozip.org/
 ReproZip's GitHub repository
 https://github.com/ViDA\-NYU/reprozip
 .SH BUGS
-Please report bugs on our mailing-list at users@reprozip.org or on GitHub at https://github.com/ViDA\-NYU/reprozip/issues.
+Please report bugs on our mailing-list at reprozip@.nyu.edu or on GitHub at https://github.com/VIDA\-NYU/reprozip/issues.
 .SH AUTHOR
 .RB "ReproZip is being developed at" " New York University" .
 
