--- a/docs/man/reprounzip-docker.1
+++ b/docs/man/reprounzip-docker.1
@@ -64,7 +64,7 @@ https://github.com/ViDA\-NYU/reprozip
 The Docker website
 https://www.docker.com/
 .SH BUGS
-Please report bugs on our mailing-list at reprozip@.nyu.edu or on GitHub at https://github.com/VIDA\-NYU/reprozip/issues.
+Please report bugs on our mailing-list at reprozip@nyu.edu or on GitHub at https://github.com/VIDA\-NYU/reprozip/issues.
 .SH AUTHOR
 .RB "ReproZip is being developed at" " New York University" .
 
