--- a/docs/man/reprounzip-vagrant.1
+++ b/docs/man/reprounzip-vagrant.1
@@ -55,7 +55,7 @@ https://github.com/ViDA\-NYU/reprozip
 The Vagrant website
 https://www.vagrantup.com/
 .SH BUGS
-Please report bugs on our mailing-list at reprozip@.nyu.edu or on GitHub at https://github.com/VIDA\-NYU/reprozip/issues.
+Please report bugs on our mailing-list at reprozip@nyu.edu or on GitHub at https://github.com/VIDA\-NYU/reprozip/issues.
 .SH AUTHOR
 .RB "ReproZip is being developed at" " New York University" .
 
