--- a/docs/man/reprozip.1
+++ b/docs/man/reprozip.1
@@ -90,7 +90,7 @@ https://www.reprozip.org/
 ReproZip's GitHub repository
 https://github.com/ViDA\-NYU/reprozip
 .SH BUGS
-Please report bugs on our mailing-list at reprozip@.nyu.edu or on GitHub at https://github.com/VIDA\-NYU/reprozip/issues.
+Please report bugs on our mailing-list at reprozip@nyu.edu or on GitHub at https://github.com/VIDA\-NYU/reprozip/issues.
 .SH AUTHOR
 .RB "ReproZip is being developed at" " New York University" .
 
